# hailstorm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml  tests.yml
examples/: agent.rs  controller.rs  user_runner.rs
proto/: hailstorm.proto
site/: next.config.js  package.json  theme.config.js
site/pages/: 01_initialization.mdx  02_simulation.mdx  03_app.mdx  _app.js  index.mdx  meta.json
src/: lib.rs
src/agent/: actor.rs  builder.rs  mod.rs  spawn.rs
src/agent/metrics/: manager_actor.rs  mod.rs  storage_actor.rs  timer.rs
src/agent/metrics/manager/: actor.rs  message.rs
src/agent/metrics/storage/: actor.rs  facade.rs  message.rs  mod.rs
src/communication/: client_actor.rs  converter.rs  downstream_agent_actor.rs  grpc.rs  message.rs  mod.rs  notifier_actor.rs  server.rs  server_actor.rs  upstream_agent_actor.rs
src/communication/protobuf/: converter.rs  grpc.rs  mod.rs
src/communication/upstream/: contract.rs  grpc.rs  mod.rs
src/controller/: actor.rs  builder.rs  controller_actor.rs  message.rs  metrics_storage.rs  mod.rs
src/controller/client/: downstream.rs
src/controller/model/: simulation.rs
src/simulation/: bot_model.rs  compound_id.rs  error.rs  mod.rs  sequential_id_generator.rs  shape.rs  simulation_actor.rs  simulation_user_model.rs  user_actor.rs
src/simulation/actor/: bot.rs  mod.rs  simulation.rs
src/simulation/bot/: error.rs  mod.rs  model_factory.rs  params.rs  registry.rs  scripted.rs
src/simulation/facade/: simulation.rs
src/simulation/rune/: mod.rs  user_mod.rs
src/simulation/rune/extension/: mod.rs
src/simulation/rune/extension/bot/: behaviour.rs  mod.rs  module.rs  state.rs
src/simulation/rune/extension/env/: mod.rs  module.rs
src/simulation/rune/extension/metrics/: mod.rs  model.rs  module.rs  performance.rs
src/simulation/rune/extension/storage/: bot_storage.rs  mod.rs  module.rs  registry.rs  storage.rs  user_storage.rs
src/simulation/rune/extension/storage/initializer/: csv.rs  empty.rs  mod.rs
src/simulation/rune/extension/user/: behaviour.rs  mod.rs  module.rs  user_state.rs
src/simulation/rune/types/: mod.rs  object.rs  value.rs  vec.rs
src/simulation/user/: error.rs  mod.rs  model_factory.rs  params.rs  registry.rs  scripted_user.rs
src/utils/: mod.rs  varint.rs
src/utils/actix/: mod.rs  synchro_context.rs  synchro_interval_func.rs  weak_context.rs
