[package]
name = "hailstorm"
version = "0.1.0"
edition = "2021"
authors = ["Davide Ghilardi <dghila@d71.dev>"]
description = "Load testing framework"
keywords = [ "loadtesting", "framework", "tool", "load", "performance" ]
repository = "https://github.com/dghilardi/hailstorm"
license = "MIT"
readme = "README.md"

[dependencies]
log = "0.4.17"
rand = "0.8.5"
thiserror = "1.0.31"

futures = "0.3.21"
tokio = "1.18.2"
tokio-stream = "0.1.8"

actix = "0.13.0"

tonic = "0.7.2"
prost = "0.10.3"
prost-types = "0.10.1"

rune = "0.10.3"
rune-modules = { version = "0.10.3", features = ["http", "json"] }
meval = "0.2.0"

[dev-dependencies]
serde = "1.0.137"
config = "0.13.1"
env_logger = "0.9.0"

[build-dependencies]
tonic-build = "0.7.2"