[package]
name = "hailstorm"
version = "0.2.0"
edition = "2021"
authors = ["Davide Ghilardi <dghila@d71.dev>"]
description = "Load testing framework"
keywords = [ "loadtesting", "framework", "tool", "load", "performance" ]
repository = "https://github.com/dghilardi/hailstorm"
license = "MIT"
readme = "README.md"

[dependencies]
time = { version = "0.3.11", features = ["formatting"] }
log = "0.4.17"
rand = "0.9"
thiserror = "2"
lazy_static = "1.4.0"

futures = "0.3.21"
tokio = "1.18.2"
tokio-stream = "0.1.8"

actix = "0.13.0"
pin-project-lite = "0.2"

tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

rune = "0.14"
rune-modules = { version = "0.14", features = ["http", "json"] }
meval = "0.2.0"

ringbuf = "0.4"
dashmap = "6"
serde = "1.0.137"
csv = "1.1.6"

[dev-dependencies]
config = "0.15"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
tempfile = "3.10.1"

[build-dependencies]
tonic-build = "0.12"
